scrollbars fixed for scrollable elements, hidden unless necessary

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -144,7 +144,7 @@
       .friend-requests {
         min-width: 275px;
         max-height: 400px;
-        overflow-y: scroll;
+        overflow-y: auto;
         overflow-x: hidden;
       }
     }
