--- a/app/assets/stylesheets/user-search.scss
+++ b/app/assets/stylesheets/user-search.scss
@@ -10,6 +10,8 @@
     list-style: none;
     margin-top: 12px;
     min-width: 210px;
+    max-height: 80vh;
+    overflow-y: auto;
 
     li {
       padding: 5px 10px;
